start-microfrontends/k8s/qa/sener-microfront/sener-microfront-service-qa.yaml
# Expose the deployment using a Service
apiVersion: v1
kind: Service
metadata:
  name: modulefederation-sener-microfront-service-qa
spec:
  selector:
    app: modulefederation-sener-microfront-qa
  ports:
    - protocol: TCP
      port: 4217
      targetPort: 80
  type: NodePort
