start-microfrontends/k8s/qa/sener-microfront/sener-microfront-ingress-qa.yaml
# Create Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: modulefederation-sener-microfront-ingress-qa
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: 
    http:frontqa.v30.cloud-ultrasist.net
      paths:
      - path: /sener(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: modulefederation-sener-microfront-service-qa
            port:
              number: 4217
  tls:
  - hosts:
    - frontqa.v30.cloud-ultrasist.net
    secretName: v30certs-qa
